--- a/app/translations/messages.pot
+++ b/app/translations/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2022-11-18 17:03+0000\n"
+"POT-Creation-Date: 2022-11-18 18:30+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -31,7 +31,9 @@ msgstr ""
 
 #: app/templates/404.html:10
 #, python-format
-msgid "If the web address is correct or you selected a link or button, %(open)scontact us%(close)s for more help."
+msgid ""
+"If the web address is correct or you selected a link or button, "
+"%(open)scontact us%(close)s for more help."
 msgstr ""
 
 #: app/templates/cookies.html:9 app/templates/cookies.html:22
@@ -43,7 +45,10 @@ msgid "Your cookie settings have been saved"
 msgstr ""
 
 #: app/templates/cookies.html:18
-msgid "Some parts of start.surveys.ons.gov.uk may use additional cookies and will have their own cookie policy and banner."
+msgid ""
+"Some parts of start.surveys.ons.gov.uk may use additional cookies and "
+"will have their own cookie policy and\n"
+"            banner."
 msgstr ""
 
 #: app/templates/cookies.html:20
@@ -51,11 +56,15 @@ msgid "Return to previous page"
 msgstr ""
 
 #: app/templates/cookies.html:23
-msgid "Cookies are small files saved on your phone, tablet or computer when you visit a website."
+msgid ""
+"Cookies are small files saved on your phone, tablet or computer when you "
+"visit a website."
 msgstr ""
 
 #: app/templates/cookies.html:24
-msgid "We use cookies to store information about how you use this service, such as the pages you visit."
+msgid ""
+"We use cookies to store information about how you use this service, such "
+"as the pages you visit."
 msgstr ""
 
 #: app/templates/cookies.html:25
@@ -63,8 +72,10 @@ msgid "Cookie settings"
 msgstr ""
 
 #: app/templates/cookies.html:27
-msgid "We use JavaScript to set our cookies.
-       Javascript is not running on your browser so you cannot change your settings."
+msgid ""
+"We use JavaScript to set our cookies. Javascript is not running on your "
+"browser so you cannot change your\n"
+"            settings."
 msgstr ""
 
 #: app/templates/cookies.html:29
@@ -80,7 +91,9 @@ msgid "reloading the page in case there was a temporary fault with JavaScript"
 msgstr ""
 
 #: app/templates/cookies.html:42
-msgid "We use two types of cookie. You can choose which cookies you're happy for us to use."
+msgid ""
+"We use two types of cookie. You can choose which cookies you're happy for"
+" us to use."
 msgstr ""
 
 #: app/templates/cookies.html:44
@@ -88,14 +101,20 @@ msgid "Cookies that help with our communications"
 msgstr ""
 
 #: app/templates/cookies.html:45
-msgid "Some of our pages may contain content from other sites which may set their own cookies.
-       These sites are sometimes called “third party” services.
-       This tells us how many people are seeing the content and whether it’s useful."
+msgid ""
+"Some of our pages may contain content from other sites which may set "
+"their own cookies. These sites are\n"
+"                sometimes called “third party” services. This tells us "
+"how many people are seeing the content and\n"
+"                whether it’s useful."
 msgstr ""
 
 #: app/templates/cookies.html:48
-msgid "In addition, if you share a link to a page, the service you share it on may set a cookie.
-       We have no control over cookies set on other websites – you can turn them off, but not through us."
+msgid ""
+"In addition, if you share a link to a page, the service you share it on "
+"may set a cookie. We have no\n"
+"                control over cookies set on other websites – you can turn"
+" them off, but not through us."
 msgstr ""
 
 #: app/templates/cookies.html:53
@@ -115,8 +134,10 @@ msgid "Cookies that remember your settings"
 msgstr ""
 
 #: app/templates/cookies.html:73
-msgid "These cookies do things like remember your preferences and the choices you make,
-        to personalise your experience of using the site."
+msgid ""
+"These cookies do things like remember your preferences and the choices "
+"you make, to personalise your\n"
+"                experience of using the site."
 msgstr ""
 
 #: app/templates/cookies.html:78
@@ -136,7 +157,9 @@ msgid "remember the notifications you've seen so we do not show them to you agai
 msgstr ""
 
 #: app/templates/cookies.html:105
-msgid "remember your progress through a form (for example, online business surveys)"
+msgid ""
+"remember your progress through a form (for example, online business "
+"surveys)"
 msgstr ""
 
 #: app/templates/cookies.html:109
@@ -156,7 +179,10 @@ msgid "Your progress"
 msgstr ""
 
 #: app/templates/cookies.html:120
-msgid "We’ll set a cookie to remember your progress while logged in. These cookies do not store your personal data."
+msgid ""
+"We’ll set a cookie to remember your progress while logged in. These "
+"cookies do not store your\n"
+"                    personal data."
 msgstr ""
 
 #: app/templates/cookies.html:125 app/templates/cookies.html:235
@@ -182,11 +208,15 @@ msgid "When a user closes the browser or when their cookie cache is cleared"
 msgstr ""
 
 #: app/templates/cookies.html:154
-msgid "To store your preferred language so that certain content can be displayed in your own language"
+msgid ""
+"To store your preferred language so that certain content can be displayed"
+" in your own language"
 msgstr ""
 
 #: app/templates/cookies.html:167
-msgid "To keep your session active when using your account to access portfolio and messages"
+msgid ""
+"To keep your session active when using your account to access portfolio "
+"and messages"
 msgstr ""
 
 #: app/templates/cookies.html:180
@@ -194,7 +224,9 @@ msgid "To store the universally unique identifier created for your account"
 msgstr ""
 
 #: app/templates/cookies.html:193
-msgid "To store the timestamp of the last request so that the session expiry warning message can be displayed"
+msgid ""
+"To store the timestamp of the last request so that the session expiry "
+"warning message can be displayed"
 msgstr ""
 
 #: app/templates/cookies.html:206
@@ -202,11 +234,15 @@ msgid "To keep you signed in when completing a survey"
 msgstr ""
 
 #: app/templates/cookies.html:209
-msgid "When a user logs out or closes the browser. Or when their cookie cache is cleared"
+msgid ""
+"When a user logs out or closes the browser. Or when their cookie cache is"
+" cleared"
 msgstr ""
 
 #: app/templates/cookies.html:219
-msgid "To store the flash object identifier for the most recent action you have performed"
+msgid ""
+"To store the flash object identifier for the most recent action you have "
+"performed"
 msgstr ""
 
 #: app/templates/cookies.html:228
@@ -214,8 +250,12 @@ msgid "Cookie message"
 msgstr ""
 
 #: app/templates/cookies.html:229
-msgid "You may see a banner when you visit start.surveys.ons.gov.uk inviting you to accept cookies or review your settings.
-        We’ll set cookies so that your computer knows you’ve seen it and not to show it again, and also to store your settings."
+msgid ""
+"You may see a banner when you visit start.surveys.ons.gov.uk inviting you"
+" to accept cookies or review your\n"
+"                    settings. We’ll set cookies so that your computer "
+"knows you’ve seen it and not to show it again, and\n"
+"                    also to store your settings."
 msgstr ""
 
 #: app/templates/cookies.html:251
@@ -240,7 +280,9 @@ msgstr ""
 
 #: app/templates/error-forbidden.html:12
 #, python-format
-msgid "To access this page you need to %(open)senter your 16-character access code%(close)s."
+msgid ""
+"To access this page you need to %(open)senter your 16-character access "
+"code%(close)s."
 msgstr ""
 
 #: app/templates/error.html:6
@@ -253,7 +295,9 @@ msgstr ""
 
 #: app/templates/error.html:12
 #, python-format
-msgid "Please try again later, or %(open)scontact us%(close)s if the problem continues."
+msgid ""
+"Please try again later, or %(open)scontact us%(close)s if the problem "
+"continues."
 msgstr ""
 
 #: app/templates/privacy-and-data-protection.html:4
@@ -270,30 +314,45 @@ msgstr ""
 
 #: app/templates/privacy-and-data-protection.html:18
 #, python-format
-msgid "recognise that you are sharing personal information with us and treat it as confidential,
-        as directed by the%(open_code_of_practice_link)s Code of Practice for Statistics%(close_link)s"
+msgid ""
+"recognise that you are sharing personal information with us and treat it "
+"as confidential, as directed\n"
+"                        by the%(open_code_of_practice_link)s Code of "
+"Practice for Statistics%(close_link)s"
 msgstr ""
 
 #: app/templates/privacy-and-data-protection.html:24
-msgid "only use your information for statistical purposes, or to help us run our surveys,
-        and not publish anything that identifies an individual, household or business"
+msgid ""
+"only use your information for statistical purposes, or to help us run our"
+" surveys, and not publish anything\n"
+"                        that identifies an individual, household or "
+"business"
 msgstr ""
 
 #: app/templates/privacy-and-data-protection.html:28
-msgid "only hold your information for as long as it is being used for producing statistics"
+msgid ""
+"only hold your information for as long as it is being used for producing "
+"statistics"
 msgstr ""
 
 #: app/templates/privacy-and-data-protection.html:31
 #, python-format
-msgid "provide survey information to%(open_access_to_research_link)s other government departments,
-       approved organisations%(close_link)s and%(open_approved_researchers_link)s approved researchers%(close_link)s
-        for statistical purposes only, subject to the same standards of protection we apply
-        (and according to the provisions of the Data Protection Legislation,
-        the Statistics and Registration Service Act 2007 and the Code of Practice for Statistics)"
+msgid ""
+"provide survey information to%(open_access_to_research_link)s\n"
+"                        other government departments, approved "
+"organisations%(close_link)s and%(open_approved_researchers_link)s\n"
+"                        approved researchers%(close_link)s for "
+"statistical purposes only, subject to the same standards of\n"
+"                        protection we apply (and according to the "
+"provisions of the Data Protection Legislation,\n"
+"                        the Statistics and Registration Service Act 2007 "
+"and the Code of Practice for Statistics)"
 msgstr ""
 
 #: app/templates/privacy-and-data-protection.html:41
-msgid "ensure our staff are aware of their obligations to protect your confidential information"
+msgid ""
+"ensure our staff are aware of their obligations to protect your "
+"confidential information"
 msgstr ""
 
 #: app/templates/privacy-and-data-protection.html:44
@@ -305,12 +364,14 @@ msgid "Who can access the information?"
 msgstr ""
 
 #: app/templates/privacy-and-data-protection.html:52
-msgid "We employ third-party providers to assist us in survey data collection.
-       These third parties work under our instruction,
-       and are strictly used as technical service providers in a capacity as a data processor.
-       We retain your data and control how this is used. The third parties we work with are:"
+msgid ""
+"We employ third-party providers to assist us in survey data collection. "
+"These third parties work under our instruction,\n"
+"        and are strictly used as technical service providers in a "
+"capacity as a data processor.\n"
+"        We retain your data and control how this is used. The third "
+"parties we work with are:"
 msgstr ""
-
 
 #: app/templates/privacy-and-data-protection.html:70
 msgid "Where can I find out more about how my information will be treated?"
@@ -318,9 +379,11 @@ msgstr ""
 
 #: app/templates/privacy-and-data-protection.html:71
 #, python-format
-msgid "If you have a question about how we process your personal data
-        or want to find out more about your rights under data protection legislation,
-        please see our %(open_ons_data_protection_link)sprotection page%(close_link)s."
+msgid ""
+"If you have a question about how we process your personal data or want to"
+" find out more\n"
+"        about your rights under data protection legislation, please see "
+"our %(open_ons_data_protection_link)sprotection page%(close_link)s."
 msgstr ""
 
 #: app/templates/signed-out.html:19
@@ -329,7 +392,9 @@ msgstr ""
 
 #: app/templates/signed-out.html:30
 #, python-format
-msgid "Keep your 16-character access code safe. You will need to enter it again to %(open)saccess your study%(close)s."
+msgid ""
+"Keep your 16-character access code safe. You will need to enter it again "
+"to %(open)saccess your study%(close)s."
 msgstr ""
 
 #: app/templates/start-timeout.html:7
@@ -341,7 +406,9 @@ msgid "This is because you’ve either:"
 msgstr ""
 
 #: app/templates/start-timeout.html:11
-msgid "been inactive for 45 minutes and your session has timed out to protect your information"
+msgid ""
+"been inactive for 45 minutes and your session has timed out to protect "
+"your information"
 msgstr ""
 
 #: app/templates/start-timeout.html:12
@@ -350,11 +417,15 @@ msgstr ""
 
 #: app/templates/start-timeout.html:16
 #, python-format
-msgid "You need to %(open)senter your 16-character access code%(close)s to access your study."
+msgid ""
+"You need to %(open)senter your 16-character access code%(close)s to "
+"access your study."
 msgstr ""
 
 #: app/templates/start-too-many-requests.html:36
-msgid "We are currently experiencing very high demand, thank you for your patience"
+msgid ""
+"We are currently experiencing very high demand, thank you for your "
+"patience"
 msgstr ""
 
 #: app/templates/start-too-many-requests.html:38
@@ -362,7 +433,9 @@ msgid "Please try again later."
 msgstr ""
 
 #: app/templates/start-too-many-requests.html:45
-msgid "Keep your 16-character access code safe. You will need it every time you access your study."
+msgid ""
+"Keep your 16-character access code safe. You will need it every time you "
+"access your study."
 msgstr ""
 
 #: app/templates/start-uac-already-used.html:5
@@ -394,11 +467,15 @@ msgid "Enter your 16-character access code"
 msgstr ""
 
 #: app/templates/start.html:42
-msgid "Keep this code safe. You will need to enter it every time you access your study"
+msgid ""
+"Keep this code safe. You will need to enter it every time you access your"
+" study"
 msgstr ""
 
 #: app/templates/start.html:44
-msgid "Your personal information is protected by law and will be kept confidential."
+msgid ""
+"Your personal information is protected by law and will be kept "
+"confidential."
 msgstr ""
 
 #: app/templates/start.html:51
@@ -406,7 +483,9 @@ msgid "Access study"
 msgstr ""
 
 #: app/templates/start.html:58
-msgid "Telephone: +44 800 085 7376<br>8am to 7pm Monday to Friday<br>8am to 1pm Saturday"
+msgid ""
+"Telephone: +44 800 085 7376<br>8am to 7pm Monday to Friday<br>8am to 1pm "
+"Saturday"
 msgstr ""
 
 #: app/templates/start.html:59
@@ -414,7 +493,7 @@ msgid "Minicom (for the deaf and hearing impaired): 18001 +44 800 085 7376"
 msgstr ""
 
 #: app/templates/start.html:60
-msgid "Email: <a href=\"mailto:surveyfeedback@ons.gov.uk\">surveyfeedback@ons.gov.uk</a>"
+msgid "Email:"
 msgstr ""
 
 #: app/templates/start.html:63
@@ -422,7 +501,9 @@ msgid "Where to find your access code"
 msgstr ""
 
 #: app/templates/start.html:64
-msgid "Your access code can be found in the invitation letter or email you received."
+msgid ""
+"Your access code can be found in the invitation letter or email you "
+"received."
 msgstr ""
 
 #: app/templates/start.html:68
