--- a/app/translations/messages.pot
+++ b/app/translations/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2022-11-18 18:30+0000\n"
+"POT-Creation-Date: 2022-11-28 16:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -36,6 +36,10 @@ msgid ""
 "%(open)scontact us%(close)s for more help."
 msgstr ""
 
+#: app/templates/base-cy.html:118
+msgid "Cookies"
+msgstr ""
+
 #: app/templates/cookies.html:9 app/templates/cookies.html:22
 msgid "Cookies on start.surveys.ons.gov.uk"
 msgstr ""
@@ -56,9 +60,7 @@ msgid "Return to previous page"
 msgstr ""
 
 #: app/templates/cookies.html:23
-msgid ""
-"Cookies are small files saved on your phone, tablet or computer when you "
-"visit a website."
+msgid "Cookies are small files saved on your device when you visit a website."
 msgstr ""
 
 #: app/templates/cookies.html:24
@@ -105,7 +107,7 @@ msgid ""
 "Some of our pages may contain content from other sites which may set "
 "their own cookies. These sites are\n"
 "                sometimes called “third party” services. This tells us "
-"how many people are seeing the content and\n"
+"how many people see the content and\n"
 "                whether it’s useful."
 msgstr ""
 
@@ -135,9 +137,9 @@ msgstr ""
 
 #: app/templates/cookies.html:73
 msgid ""
-"These cookies do things like remember your preferences and the choices "
-"you make, to personalise your\n"
-"                experience of using the site."
+"These cookies personalise your experience of using the site,\n"
+"                by doing things like remembering your preferences and the"
+" choices you make."
 msgstr ""
 
 #: app/templates/cookies.html:78
@@ -153,7 +155,7 @@ msgid "These essential cookies do things like:"
 msgstr ""
 
 #: app/templates/cookies.html:102
-msgid "remember the notifications you've seen so we do not show them to you again"
+msgid "remember the notifications you've seen so we do not show you them again"
 msgstr ""
 
 #: app/templates/cookies.html:105
@@ -301,18 +303,17 @@ msgid ""
 msgstr ""
 
 #: app/templates/privacy-and-data-protection.html:4
+#: app/templates/privacy-and-data-protection.html:8
 msgid "Privacy and data protection"
 msgstr ""
 
-#: app/templates/privacy-and-data-protection.html:9
-msgid "We will keep your information secure and confidential"
+#: app/templates/privacy-and-data-protection.html:10
+msgid ""
+"We will keep your information secure and confidential. This means that we"
+" will:"
 msgstr ""
 
-#: app/templates/privacy-and-data-protection.html:12
-msgid "This means that we will:"
-msgstr ""
-
-#: app/templates/privacy-and-data-protection.html:18
+#: app/templates/privacy-and-data-protection.html:16
 #, python-format
 msgid ""
 "recognise that you are sharing personal information with us and treat it "
@@ -321,12 +322,14 @@ msgid ""
 "Practice for Statistics%(close_link)s"
 msgstr ""
 
-#: app/templates/privacy-and-data-protection.html:24
+#: app/templates/privacy-and-data-protection.html:22
 msgid ""
 "only use your information for statistical purposes, or to help us run our"
-" surveys, and not publish anything\n"
-"                        that identifies an individual, household or "
-"business"
+" surveys"
+msgstr ""
+
+#: app/templates/privacy-and-data-protection.html:25
+msgid "not publish anything that identifies an individual, household or business"
 msgstr ""
 
 #: app/templates/privacy-and-data-protection.html:28
@@ -360,30 +363,30 @@ msgid "maintain the security of our systems and our buildings"
 msgstr ""
 
 #: app/templates/privacy-and-data-protection.html:51
-msgid "Who can access the information?"
+msgid "Access to information"
 msgstr ""
 
 #: app/templates/privacy-and-data-protection.html:52
 msgid ""
 "We employ third-party providers to assist us in survey data collection. "
-"These third parties work under our instruction,\n"
-"        and are strictly used as technical service providers in a "
-"capacity as a data processor.\n"
-"        We retain your data and control how this is used. The third "
+"These third parties work under\n"
+"        our instruction and are strictly used as technical service "
+"providers in a capacity as a data processor.\n"
+"        We retain your data and control of how it is used. The third "
 "parties we work with are:"
 msgstr ""
 
-#: app/templates/privacy-and-data-protection.html:70
-msgid "Where can I find out more about how my information will be treated?"
+#: app/templates/privacy-and-data-protection.html:69
+msgid "Further information"
 msgstr ""
 
-#: app/templates/privacy-and-data-protection.html:71
+#: app/templates/privacy-and-data-protection.html:70
 #, python-format
 msgid ""
-"If you have a question about how we process your personal data or want to"
-" find out more\n"
-"        about your rights under data protection legislation, please see "
-"our %(open_ons_data_protection_link)sprotection page%(close_link)s."
+"If you have a question about how we process your data or want to find out"
+" more about your rights\n"
+"        under data protection legislation, see our "
+"%(open_ons_data_protection_link)sprotection page%(close_link)s."
 msgstr ""
 
 #: app/templates/signed-out.html:19
@@ -447,7 +450,7 @@ msgid "Someone has already submitted a response using this access code."
 msgstr ""
 
 #: app/templates/start-uac-inactive.html:6
-msgid "This access code has been marked inactive"
+msgid "This questionnaire has now closed"
 msgstr ""
 
 #: app/templates/start.html:21
@@ -507,7 +510,7 @@ msgid ""
 msgstr ""
 
 #: app/templates/start.html:68
-msgid "Who can I contact for assistance or further information?"
+msgid "Who can I contact for further information?"
 msgstr ""
 
 #: app/templates/partials/messages.html:8
