--- a/app/translations/cy/LC_MESSAGES/messages.po
+++ b/app/translations/cy/LC_MESSAGES/messages.po
@@ -593,7 +593,7 @@ msgstr "PLACEHOLDER WELSH "
 #: app/templates/start-uac-inactive.html:6
 msgid "This questionnaire has now closed"
 msgstr "PLACEHOLDER WELSH "
-"This questionnaire has now closed'"
+"This questionnaire has now closed"
 
 #: app/templates/start.html:21
 msgid "Enter an access code"
