--- a/app/translations/cy/LC_MESSAGES/messages.po
+++ b/app/translations/cy/LC_MESSAGES/messages.po
@@ -53,8 +53,8 @@ msgid ""
 "                        <p>This information helps us improve our services"
 " and make sure that the website works as well as possible.</p>"
 msgstr ""
-"<p>PLACEHOLDER WELSH To collect information about how you use this website, we use <a href="
-" + cookiesPageURL + >cookies.</a></p>\n"
+"<p>PLACEHOLDER WELSH To collect information about how you use this "
+"website, we use <a href= + cookiesPageURL + >cookies.</a></p>\n"
 "                        <p>This information helps us improve our services"
 " and make sure that the website works as well as possible.</p>"
 
@@ -83,7 +83,8 @@ msgstr "PLACEHOLDER WELSH Return to previous page"
 #: app/templates/cookies.html:23
 msgid "Cookies are small files saved on your device when you visit a website."
 msgstr ""
-"PLACEHOLDER WELSH Cookies are small files saved on your device when you visit a website."
+"PLACEHOLDER WELSH Cookies are small files saved on your device when you "
+"visit a website."
 
 #: app/templates/cookies.html:24
 msgid ""
@@ -141,8 +142,8 @@ msgid ""
 "how many people see the content and\n"
 "                whether it’s useful."
 msgstr ""
-"PLACEHOLDER WELSH Some of our pages may contain content from other sites which may set "
-"their own cookies. These sites are\n"
+"PLACEHOLDER WELSH Some of our pages may contain content from other sites "
+"which may set their own cookies. These sites are\n"
 "                sometimes called “third party” services. This tells us "
 "how many people see the content and\n"
 "                whether it’s useful."
@@ -181,7 +182,8 @@ msgid ""
 "                by doing things like remembering your preferences and the"
 " choices you make."
 msgstr ""
-"PLACEHOLDER WELSH These cookies personalise your experience of using the site,\n"
+"PLACEHOLDER WELSH These cookies personalise your experience of using the "
+"site,\n"
 "                by doing things like remembering your preferences and the"
 " choices you make."
 
@@ -199,7 +201,9 @@ msgstr "PLACEHOLDER WELSH These essential cookies do things like:"
 
 #: app/templates/cookies.html:102
 msgid "remember the notifications you've seen so we do not show you them again"
-msgstr "PLACEHOLDER WELSH remember the notifications you've seen so we do not show you them again"
+msgstr ""
+"PLACEHOLDER WELSH remember the notifications you've seen so we do not "
+"show you them again"
 
 #: app/templates/cookies.html:105
 msgid ""
@@ -320,8 +324,9 @@ msgid ""
 "                    We’ll set cookies so that your computer knows you’ve "
 "seen it and not to show it again and store your settings."
 msgstr ""
-"PLACHOLDER WELSH You may see a banner when you visit start.surveys.ons.gov.uk inviting you"
-" to accept cookies or review your settings.\n"
+"PLACHOLDER WELSH You may see a banner when you visit "
+"start.surveys.ons.gov.uk inviting you to accept cookies or review your "
+"settings.\n"
 "                    We’ll set cookies so that your computer knows you’ve "
 "seen it and not to show it again and store your settings."
 
@@ -381,8 +386,8 @@ msgid ""
 "We will keep your information secure and confidential. This means that we"
 " will:"
 msgstr ""
-"PLACEHOLDER WELSH We will keep your information secure and confidential. This means that we"
-" will:"
+"PLACEHOLDER WELSH We will keep your information secure and confidential. "
+"This means that we will:"
 
 #: app/templates/privacy-and-data-protection.html:16
 #, python-format
@@ -402,20 +407,22 @@ msgid ""
 "only use your information for statistical purposes, or to help us run our"
 " surveys"
 msgstr ""
-"PLACEHOLDER WELSH only use your information for statistical purposes, or to help us run our"
-" surveys"
+"PLACEHOLDER WELSH only use your information for statistical purposes, or "
+"to help us run our surveys"
 
 #: app/templates/privacy-and-data-protection.html:25
 msgid "not publish anything that identifies an individual, household or business"
-msgstr "PLACEHOLDER WELSH not publish anything that identifies an individual, household or business"
+msgstr ""
+"PLACEHOLDER WELSH not publish anything that identifies an individual, "
+"household or business"
 
 #: app/templates/privacy-and-data-protection.html:28
 msgid ""
 "only hold your information for as long as it is being used for producing "
 "statistics"
 msgstr ""
-"PLACEHOLDER WELSH only hold your information for as long as it is being used for producing "
-"statistics"
+"PLACEHOLDER WELSH only hold your information for as long as it is being "
+"used for producing statistics"
 
 #: app/templates/privacy-and-data-protection.html:31
 #, python-format
@@ -485,8 +492,8 @@ msgid ""
 "        under data protection legislation, see our "
 "%(open_ons_data_protection_link)sprotection page%(close_link)s."
 msgstr ""
-"PLACEHOLDER WELSH If you have a question about how we process your data or want to find out"
-" more about your rights\n"
+"PLACEHOLDER WELSH If you have a question about how we process your data "
+"or want to find out more about your rights\n"
 "        under data protection legislation, see our "
 "%(open_ons_data_protection_link)sprotection page%(close_link)s."
 
