--- a/app/translations/en/LC_MESSAGES/messages.po
+++ b/app/translations/en/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-01-30 10:33+0000\n"
+"POT-Creation-Date: 2023-02-02 14:25+0000\n"
 "PO-Revision-Date: 2022-11-18 18:31+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: en\n"
@@ -37,8 +37,17 @@ msgid ""
 "%(open)scontact us%(close)s for more help."
 msgstr ""
 
-#: app/templates/base-cy.html:112
+#: app/templates/base-cy.html:111
 msgid "Cookies"
+msgstr ""
+
+#: app/templates/base-cy.html:114
+#, python-format
+msgid ""
+"To collect information about how you use this website, we "
+"use%(open_cookies_link)s cookies.%(close_link)s</br>\n"
+"                        This information helps us improve our services "
+"and make sure that the website works as well as possible."
 msgstr ""
 
 #: app/templates/cookies.html:10 app/templates/cookies.html:38
@@ -532,105 +541,4 @@ msgstr ""
 #, python-format
 msgid "There are %(errorcount)s problems with your answer"
 msgstr ""
-
-#~ msgid ""
-#~ "Cookies are small files saved on "
-#~ "your phone, tablet or computer when "
-#~ "you visit a website."
-#~ msgstr ""
-
-#~ msgid ""
-#~ "Some of our pages may contain "
-#~ "content from other sites which may "
-#~ "set their own cookies. These sites "
-#~ "are\n"
-#~ "                sometimes called “third party”"
-#~ " services. This tells us how many "
-#~ "people are seeing the content and\n"
-#~ ""
-#~ "                whether it’s useful."
-#~ msgstr ""
-
-#~ msgid ""
-#~ "These cookies do things like remember"
-#~ " your preferences and the choices you"
-#~ " make, to personalise your\n"
-#~ "                experience of using the site."
-#~ msgstr ""
-
-#~ msgid ""
-#~ "remember the notifications you've seen "
-#~ "so we do not show them to "
-#~ "you again"
-#~ msgstr ""
-
-#~ msgid ""
-#~ "You may see a banner when you "
-#~ "visit start.surveys.ons.gov.uk inviting you to"
-#~ " accept cookies or review your\n"
-#~ "                    settings. We’ll set "
-#~ "cookies so that your computer knows "
-#~ "you’ve seen it and not to show "
-#~ "it again, and\n"
-#~ "                    also to store your settings."
-#~ msgstr ""
-
-#~ msgid "We will keep your information secure and confidential"
-#~ msgstr ""
-
-#~ msgid "This means that we will:"
-#~ msgstr ""
-
-#~ msgid ""
-#~ "only use your information for "
-#~ "statistical purposes, or to help us "
-#~ "run our surveys, and not publish "
-#~ "anything\n"
-#~ "                        that identifies an "
-#~ "individual, household or business"
-#~ msgstr ""
-
-#~ msgid "Who can access the information?"
-#~ msgstr ""
-
-#~ msgid "Where can I find out more about how my information will be treated?"
-#~ msgstr ""
-
-#~ msgid ""
-#~ "If you have a question about how"
-#~ " we process your personal data or "
-#~ "want to find out more\n"
-#~ "        about your rights under data "
-#~ "protection legislation, please see our "
-#~ "%(open_ons_data_protection_link)sprotection page%(close_link)s."
-#~ msgstr ""
-
-#~ msgid "This access code has been marked inactive"
-#~ msgstr ""
-
-#~ msgid "Who can I contact for assistance or further information?"
-#~ msgstr ""
-
-#~ msgid ""
-#~ "<p>To collect information about how you"
-#~ " use this website, we use <a "
-#~ "href= + cookiesPageURL + >cookies.</a></p>"
-#~ "\n"
-#~ "                        <p>This information helps"
-#~ " us improve our services and make "
-#~ "sure that the website works as "
-#~ "well as possible.</p>"
-#~ msgstr ""
-
-#~ msgid ""
-#~ "Your access code can be found in"
-#~ " the invitation letter or email you"
-#~ " received."
-#~ msgstr ""
-
-#~ msgid "Hide this"
-#~ msgstr ""
-
-#~ msgid "Enter a valid access code"
-#~ msgstr ""
 
