Add missed part of translation

--- a/app/translations/cy/LC_MESSAGES/messages.po
+++ b/app/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-02-02 14:25+0000\n"
+"POT-Creation-Date: 2023-02-08 17:50+0000\n"
 "PO-Revision-Date: 2022-11-18 18:31+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -93,7 +93,7 @@ msgid ""
 "as the pages you visit."
 msgstr ""
 "Rydyn ni'n defnyddio cwcis i storio gwybodaeth am y ffordd rydych chi'n "
-"defnyddio'r gwasanaeth hwn"
+"defnyddio'r gwasanaeth hwn, fel y tudalennau y byddwch chi'n mynd iddynt."
 
 #: app/templates/cookies.html:41
 msgid "Cookie settings"
