--- a/app/translations/cy/LC_MESSAGES/messages.po
+++ b/app/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-02-02 14:25+0000\n"
+"POT-Creation-Date: 2023-02-09 10:46+0000\n"
 "PO-Revision-Date: 2022-11-18 18:31+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -40,7 +40,7 @@ msgid ""
 "%(open)scontact us%(close)s for more help."
 msgstr ""
 "Os yw'r cyfeiriad gwe yn gywir neu os gwnaethoch chi ddewis dolen neu "
-"fotwm"
+"fotwm,%(open)scysylltwch â ni%(close)s am fwy o gymorth."
 
 #: app/templates/base-cy.html:111
 msgid "Cookies"
@@ -93,7 +93,7 @@ msgid ""
 "as the pages you visit."
 msgstr ""
 "Rydyn ni'n defnyddio cwcis i storio gwybodaeth am y ffordd rydych chi'n "
-"defnyddio'r gwasanaeth hwn"
+"defnyddio'r gwasanaeth hwn, fel y tudalennau y byddwch chi'n mynd iddynt."
 
 #: app/templates/cookies.html:41
 msgid "Cookie settings"
